avoids border overlapping, but just a bit

--- a/styles/dash.css
+++ b/styles/dash.css
@@ -375,6 +375,14 @@ button.menu-toggle.clicked {
 
 }
 
+.dashboard--menu:hover li:hover::before {
+
+    border-left: none;
+
+}
+
+
+
 .dashboard--menu:hover li:not(:hover)::after {
 
     content: '';
